--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,6 +49,11 @@ career-profile:
     summary: |
       Physicist with excellent problem-solving and data analysis skills, 
       who takes pride in applying algorithms to solve real-world business problems.
+      I am a Ph.D. in physics with experience in data analysis and programming. 
+      I particularly enjoy working with the Python scientific stack, which I have been using for more than six years. 
+      As a researcher in academia, I acquired solid mathematical skills, and the ability to work both independently and in a team. 
+      Moreover, I am a good storyteller since I have been improving my presentation skills in my academic career when I have to be able to explain complex problems in physics to non-experts, as my CV can attest. 
+      
       You can find my CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a> or at <a href="https://app.enhancv.com/share/aaa43bbd?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"  rel="nofollow"> one-page CV of Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
