--- a/_data/data.yml
+++ b/_data/data.yml
@@ -47,13 +47,18 @@ sidebar:
 career-profile:
     title: Career Profile
     summary: |
-      Physicist with excellent problem-solving and data analysis skills, 
-      who takes pride in applying algorithms to solve real-world business problems.
+            #      Physicist with excellent problem-solving and data analysis skills, 
+            #      who takes pride in applying algorithms to solve real-world business problems.
       I am a Ph.D. in physics with experience in data analysis and programming. 
       I particularly enjoy working with the Python scientific stack, which I have been using for more than six years. 
       As a researcher in academia, I acquired solid mathematical skills, and the ability to work both independently and in a team. 
       Moreover, I am a good storyteller since I have been improving my presentation skills in my academic career when I have to be able to explain complex problems in physics to non-experts, as my CV can attest. 
-      
+      After 4 years of academic research as a postdoc, I found my true passion in data science, where the confluence of math, statistics, and computer science (which I all enjoy on their own) provides unique tools that are actually changing the world. Moreover, I realize that data science offers me unique opportunities to cultivate my skills in a manner that allows me to reach my full career potential.  
+      I'm a problem solver at heart and I love to produce
+actionable solutions for my clients. I find very exciting to build data products following the whole chain,
+from the business problem to the data and algorithmic challenges. I enjoy approaching new challenges, working and
+communicating with a diverse crowd. This just helps to  nurture my natural curiosity.
+
       You can find my CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a> or at <a href="https://app.enhancv.com/share/aaa43bbd?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"  rel="nofollow"> one-page CV of Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
