--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,7 +49,7 @@ career-profile:
     summary: |
       I am a Ph.D. in physics with experience in data analysis and programming. 
       I particularly enjoy working with the Python scientific stack, which I have been using for more than six years.  As a researcher in academia, I acquired solid mathematical skills, and the ability to work both independently and in a team. Moreover, I am a good storyteller since I have been improving my presentation skills in my academic career when I have to be able to explain complex problems in physics to non-experts, as my CV can attest. 
-      
+      After 4 years of academic research as a postdoc, I found my true passion in data science, where the confluence of math, statistics, and computer science (which I all enjoy on their own) provides unique tools that are actually changing the world. Moreover, I realize that data science offers me unique opportunities to cultivate my skills in a manner that allows me to reach my full career potential.  
       You can find my CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a> or at <a href="https://app.enhancv.com/share/aaa43bbd?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"  rel="nofollow"> one-page CV of Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
