updata data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,7 +15,7 @@ sidebar:
     email: jqzhou_hit@hotmail.com #jqzhou.polytechnique@gmail.com #jqzhou_hit@hotmail.com 
     phone: +33(0)785495109 
     #website: blog.webjeda.com #do not add http://
-    #linkedin: alandoe
+    linkedin: www.linkedin.com/in/jianqiang-sky-zhou
     github: mxz2013  #sharu725
     #gitlab:
     #bitbucket:
