updata data.yml

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -35,13 +35,16 @@ sidebar:
         level: Beginner 
 
     interests:
+      - item: Football (MU & RM F.C.)
+        link:
+
       - item: Climbing
         link:
 
-      - item: Computer games
+      - item: Computer games (DOTA2)
         link:
 
-      - item: Travel
+      - item: Travel with family
         link:
 
 career-profile:
