change one-page-cv link

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,7 @@ career-profile:
 
       I'm a problem solver at heart and I love to produce actionable solutions for my clients. I enjoy approaching new challenges, working and communicating with a diverse crowd. This just helps to nurture my natural curiosity.
 
-      You can find my CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a> or at <a href="https://app.enhancv.com/share/aaa43bbd?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"  rel="nofollow"> one-page CV of Jianqiang Sky ZHOU</a>.
+      You can find my CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a> or at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/JianqiangZhou-CV.pdf" target="_blank"  rel="nofollow"> one-page CV of Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
       university: École Polytechnique
