--- a/_data/data.yml
+++ b/_data/data.yml
@@ -144,13 +144,14 @@ publications:
          The list of my publications in academic research. 
     papers:
       - title: Anharmonic melting of the charge density wave in single layer TiSe2
-        link: "https://arxiv.org/abs/1910.12709"
+        #link: "https://arxiv.org/abs/1910.12709"
         link: "https://pubs.acs.org/doi/abs/10.1021/acs.nanolett.0c00597"
         authors: Zhou, J. S., Monacelli, L., Bianco, R., Errea, I., Mauri, F., Calandra, M.
         conference: "Nano Lett. (2020)"
+
     papers:
       - title: Theory of the thickness dependence of the charge density wave transition in 1T-TiTe2 
-        link: "https://arxiv.org/abs/2007.06515"
+        #link: "https://arxiv.org/abs/2007.06515"
         link: "https://iopscience.iop.org/article/10.1088/2053-1583/abae7a"
         authors: Zhou, J. S., Bianco, R., Monacelli, L., Errea, I., Mauri, F., Calandra, M.
         conference: "2D Materials (2020)"
