--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,6 +87,11 @@ education:
       university: Harbin institute of technology (China)
       time: 2005 - 2009
 experiences:
+    - role: Solution Scientist 
+      time: 2020 - now 
+      company: <a href="https://www.flyinstinct.com/" target="_blank"  rel="nofollow"> Flyininstinct</a> 
+      details: |
+              BLABLA.
     - role: Post-doctoral Fellow 
       time: 2018 - 2020 
       company: Institut des Nanosciences de Paris Sorbonne Université 
