--- a/_data/data.yml
+++ b/_data/data.yml
@@ -148,6 +148,11 @@ publications:
     intro: |
          The list of my publications in academic research. 
     papers:
+      - title: Unraveling intrinsic correlation effects with angle-resolved photoemission spectroscopy
+        #link: "https://arxiv.org/abs/1910.12709"
+        link: "https://doi.org/10.1073/pnas.2012625117"
+        authors: Jianqiang Sky Zhou, Lucia Reining, Alessandro Nicolaou, Azzedine Bendounan, Kari Ruotsalainen, Marco Vanzini, J. J. Kas, J. J. Rehr, Matthias Muntwiler, Vladimir N. Strocov, Fausto Sirotti,  Matteo Gatti
+        conference: "Nano Lett. (2020)"
       - title: Anharmonic melting of the charge density wave in single layer TiSe2
         #link: "https://arxiv.org/abs/1910.12709"
         link: "https://pubs.acs.org/doi/abs/10.1021/acs.nanolett.0c00597"
