--- a/_data/data.yml
+++ b/_data/data.yml
@@ -91,7 +91,12 @@ experiences:
       time: 2020 - now 
       company: <a href="https://www.flyinstinct.com/" target="_blank"  rel="nofollow"> Flyininstinct</a> 
       details: |
-              BLABLA.
+               Providing best solutions based on computer vision technology to industrial products for airport runway FOD (foreign object debris) detection.
+              - Proof of concept: Design new algorithms based on computer vision technique. Implementthem in Python, and prove their performance in our products.
+              - Data analysis: Extract information from images, analyze them according to the requirementof the products, which helps to design better algorithms.
+              - Software team lead: explain and discuss daily tasks and distribute daily work. Provide thebest direction to go for product development based on team members’ ability.
+
+                
     - role: Post-doctoral Fellow 
       time: 2018 - 2020 
       company: Institut des Nanosciences de Paris Sorbonne Université 
