--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,7 @@ career-profile:
 
       After 3 years of academic research as a postdoc, I found my true passion in data science, where the confluence of math, statistics, and computer science (which I all enjoy on their own) provides unique tools that are actually changing the world. I realize that data science offers me unique opportunities to cultivate my skills in a manner that allows me to reach my full career potential.  
 
-      In 2020, I joined Flyinstinct (a startup provides a digital platform for airport inspections developed with the most advancedtechnologies of computer vision and AI algorithm) as a solution scientist. After joining Flyinstinct, I have provided several key solutions (more than one key solutions per month in average) that have been applied to our industrial FOD (foreign object debris) detection system, such that we successfully deployed it to Lyon and Orly Airpots.    
+      In 2020, I joined Flyinstinct (a startup that provides a digital platform for airport inspections developed with the most advanced technologies of computer vision and AI algorithm) as a solution scientist. After joining Flyinstinct, I have provided several key solutions (more than one key solution per month on average) that have been applied to our industrial FOD (foreign object debris) detection system, such that we successfully deployed it to Lyon and Orly Airports.
 
       I'm a problem solver at heart and I love to produce actionable solutions for my clients. I enjoy approaching new challenges, working and communicating with a diverse crowd. This just helps to nurture my natural curiosity.
 
