--- a/_data/data.yml
+++ b/_data/data.yml
@@ -64,6 +64,8 @@ career-profile:
 
       My full CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/Curriculum_Vitae_Sky_ZHOU.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
 
+    Keywords: Optimistic
+
 education:
     - degree: Ph.D. in Theoretical Physics 
       university: École Polytechnique
