--- a/_data/data.yml
+++ b/_data/data.yml
@@ -65,6 +65,7 @@ career-profile:
 
       My full CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/Curriculum_Vitae_Sky_ZHOU_compressed.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
 
+      An interesting personality test result of myself <a href="https://www.16personalities.com/profiles/57f89ab08717a" target="_blank" rel="nofollow"> The personality of Jianqiang Sky ZHOU </a>.  
 
 education:
     - degree: Ph.D. in Theoretical Physics 
