--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,6 +49,10 @@ sidebar:
       - item: Travel with family
         link:
 
+    keywords:
+      - item: responsible  
+        link:
+
 career-profile:
     title: Career Profile
 
