--- a/_data/data.yml
+++ b/_data/data.yml
@@ -50,7 +50,15 @@ sidebar:
         link:
 
     keywords:
-      - item: responsible  
+      - item: Problem-solver 
+        link:
+      - item: Responsible  
+        link:
+      - item: Optimistic  
+        link:
+      - item: Fast-learner 
+        link:
+      - item: Story-telling 
         link:
 
 career-profile:
