--- a/_data/data.yml
+++ b/_data/data.yml
@@ -52,13 +52,15 @@ sidebar:
     keywords:
       - item: Problem-solver 
         link:
-      - item: Responsible  
+      - item: Reliable and Patient 
         link:
-      - item: Optimistic  
+      - item: Loyal and Hardworking  
+        link:
+      - item: Optimistic and Enthusiastic  
         link:
       - item: Fast-learner 
         link:
-      - item: Story-telling 
+      - item: Story-teller 
         link:
 
 career-profile:
