--- a/_data/data.yml
+++ b/_data/data.yml
@@ -77,7 +77,9 @@ career-profile:
       I'm a problem solver at heart and I love to produce actionable solutions for my clients. I enjoy approaching new challenges, working and communicating with a diverse crowd. This just helps to nurture my natural curiosity.
 
 
-      My full CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/Curriculum_Vitae_Sky_ZHOU_compressed.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
+      My full CV (3 pages) can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/Curriculum_Vitae_Sky_ZHOU_compressed.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
+      A short one page CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/one_page_cv_sky.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
+
 
       An interesting personality test result of myself can be found at <a href="https://www.16personalities.com/profiles/57f89ab08717a" target="_blank" rel="nofollow"> The defender personality of Jianqiang Sky ZHOU </a>.  
 
