--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,7 +78,7 @@ career-profile:
 
 
       My full CV (3 pages) can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/Curriculum_Vitae_Sky_ZHOU_compressed.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
-      A short one page CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/one_page_cv_sky.pdf" target="_blank" rel="nofollow">full CV of Jianqiang Sky ZHOU </a>.  
+      A short one page CV can be found at <a href="https://github.com/mxz2013/online-cv/blob/gh-pages/one_page_cv_sky.pdf" target="_blank" rel="nofollow">one-page CV of Jianqiang Sky ZHOU </a>.  
 
 
       An interesting personality test result of myself can be found at <a href="https://www.16personalities.com/profiles/57f89ab08717a" target="_blank" rel="nofollow"> The defender personality of Jianqiang Sky ZHOU </a>.  
